# image-compare

./: CMakeLists.txt  README.md  README.txt
src/: CMakeLists.txt  export.h  interface.cpp  interface.h
test/: CMakeLists.txt  main.cpp
