CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH})

IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	MESSAGE(STATUS "current platform: Linux ")
	SET(RUN_PLATFORM "Linux")
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
	MESSAGE(STATUS "current platform: Windows")
	SET(RUN_PLATFORM "Windows")
ELSE ()
	MESSAGE(FATAL_ERROR "not support other platform: ${CMAKE_SYSTEM_NAME}")
ENDIF ()
#动态库编译
ADD_SUBDIRECTORY(src)
#测试程序编译
ADD_SUBDIRECTORY(test)